fixed overflow issues

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -17,6 +17,7 @@ html {
 
 body {
   overflow: hidden;
+  overflow-y: auto;
 }
 
 // Theme
